--- a/src/components/Academics/Academics.module.css
+++ b/src/components/Academics/Academics.module.css
@@ -1,6 +1,6 @@
 @import "../../vars.css";
 
-.container {
+.academicsContainer {
   position: relative;
   background-color: rgba(12, 12, 12, 0.6);
   border-radius: 15px;
@@ -11,38 +11,35 @@
   margin-right: 10%;
 }
 
-.title {
+.academicsTitle {
   color: var(--color-text);
-  font-size: 15px;
+  font-size: 25px;
   font-weight: 700;
   letter-spacing: 1.75px;
   text-transform: uppercase;
 }
 
-.content {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-
-.aboutImage {
-  width: 15%;
-}
-
-.aboutItems {
-  color: var(--color-text);
+.academicsContent {
   display: flex;
   flex-direction: column;
-  gap: 0px;
+  align-items: center;
 }
 
-.aboutItem {
+.academicsItems {
+  color: var(--color-text);
   display: flex;
   flex-direction: row;
-  align-items: center;
+  gap: 15px;
+}
+
+.academicsItem {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
   border-radius: 20px;
   list-style: none;
   padding: 25px;
+  width: 100%;
   background-image: linear-gradient(
     90deg,
     rgba(165, 215, 232, 0.42) 0%,
@@ -53,39 +50,35 @@
   transition: 0.4s;
 }
 
-.aboutItem:hover {
+.academicsItem:hover {
   background-size: 100% 100%;
 }
 
-.aboutItem h3 {
-  font-size: 25px;
+.academicsItem h3 {
+  font-size: 15px;
   font-weight: 600;
 }
 
-.aboutItem p {
+.academicsItem p {
   font-size: 20px;
 }
 
 @media screen and (max-width: 830px) {
-  .container {
+  .academicsContainer {
     background-color: transparent;
     padding-left: 0;
     padding-right: 0;
   }
 
-  .content {
+  .academicsContent {
     flex-direction: column;
   }
 
-  .aboutImage {
-    display: none;
-  }
-
-  .aboutItems {
+  .academicsItems {
     margin-top: 25px;
   }
 
-  .aboutItem {
+  .academicsItem {
     padding-left: 0;
     padding-right: 0;
   }
