--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -38,8 +38,7 @@
   text-decoration: none;
 }
 
-@media screen and (max-width: 830px) 
-{}
+
   .navbar {
     flex-direction: column;
     align-items: flex-start;
@@ -66,11 +65,11 @@
     align-items: center;
     gap: 13px;
     border-radius: 10px;
-    background: rgb(14, 41, 88);
+    background: rgb(25, 55, 109);
     background: linear-gradient(
       0deg,
-      rgba(1, 4, 11, 0.2) 0%,
-      rgb(1, 2, 5) 100%
+      rgba(25, 55, 109, 0.2) 0%,
+      rgba(25, 55, 109, 1) 100%
     );
     padding: 24px 33px;
     box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.25);
